syntax = "proto3";

package pb;


//The Hello service definition.
service Hello {
 rpc SayHello (SayHelloRequest) returns (SayHelloReply);
}

message SayHelloRequest {}

message SayHelloReply {}

